fixed nav bar overlap

--- a/TheatreCMS/Content/Site.css
+++ b/TheatreCMS/Content/Site.css
@@ -194,9 +194,7 @@ footer .list-group-item :hover {
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
-
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-top: 25px;
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
